Rework the positioning functions of <mover>, <munder>, <munderover> to improve their behavior w.r.t italic and non-italics fonts. Also use some fuzzy arithmetic to mitigate roundoff errors that could cause accents to collide with their base, b=135940, r=bzbarsky, sr=roc+moz